build/k8s/api/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: ${PROJECT_NAME}-${PROJECT_ENV}
