build/k8s/api/prod/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ${PROJECT_NAME}-api-${PROJECT_ENV}
  namespace: ${PROJECT_NAME}-${PROJECT_ENV}
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`${PROD_API_DOMAIN}`)
    kind: Rule
    services:
    - name: ${PROJECT_NAME}-api
      port: 8000
